# hurlalot_web

./: .gitignore  Cargo.toml  README.md  Trunk.toml  hurlalot_web-c146b57abcf490ad.js  hurlalot_web-c146b57abcf490ad_bg.wasm  index.html  justfile  leptosfmt.toml  renovate.json  style-c22df929a191a350.css  tailwind.config.js  tailwind.css
.github/workflows/: release.yml
scss/: style.scss
src/: main.rs
src/about/: mod.rs
src/editor/: analyze.rs  cmpx_editor.rs  fileedit.rs  mod.rs
src/navigation/: mod.rs
src/settings/: mod.rs
