[package]
name = "hurlalot_web"
version = "0.1.0"
edition = "2021"

[dependencies]
leptos = { version= "0.5.1",default-features = false, features=["csr","serde"]}
leptos_router = { version= "0.5.1",default-features = false, features=["csr"]}
leptonic = { git = "https://github.com/lpotthast/leptonic" }


async-trait = "0.1.74"
serde = "1.0.189"

log = "0.4"
console_log = "1"
console_error_panic_hook = "0.1.7"
leptos-use = "0.7.2"

[dev-dependencies]
wasm-bindgen-test = "0.3.37"

[build-dependencies]
leptonic-theme = "0.2.0"
leptos-tiptap-build = "0.2.4"
