[package]
name = "hurlalot_web"
version = "0.1.0"
edition = "2021"

[dependencies]
leptos = { version= "0.5.1",default-features = false, features=["csr","serde"]}
leptos_router = { version= "0.5.1",default-features = false, features=["csr"]}
leptonic = { git = "https://github.com/lpotthast/leptonic" }


async-trait = "0.1.68"
serde = "1.0.164"
serde_json = "1.0.107"

log = "0.4"
console_log = "1"
console_error_panic_hook = "0.1.7"
leptos-use = "0.8.1"
web-time = "0.2.3"
reqwasm = "0.5"

[dev-dependencies]
wasm-bindgen-test = "0.3.0"

[build-dependencies]
leptonic-theme = "0.3.0"
leptos-tiptap-build = "0.2.4"
